# bgoodrs-CMake-Examples

./: README.markdown
optional_targets/: .gitignore  CMakeLists.txt
optional_targets/app13/: CMakeLists.txt  app13.cpp
optional_targets/dir11/: dir11file.cpp
optional_targets/dir12/: dir12file.cpp
optional_targets/dirextra/: CMakeLists.txt  appextra.cpp
optional_targets/fancy/: CMakeLists.txt  fancy_stuff.h
shared_lib_targets/: CMakeLists.txt
shared_lib_targets/app13/: CMakeLists.txt  app13.cpp  wrapper.template.sh
shared_lib_targets/cmake.modules/: deploy_util.cmake
shared_lib_targets/dir11/: CMakeLists.txt  dir11file.h
shared_lib_targets/dir12/: CMakeLists.txt  dir12file.h
shared_lib_targets/dirextra/: dirextra.cpp  dirextra.h
shared_lib_targets/fancy/: CMakeLists.txt  fancy_stuff.cpp
